--- a/home-manager/features/wofi/style.css
+++ b/home-manager/features/wofi/style.css
@@ -4,27 +4,27 @@
 
 window {
 margin: 0px;
-border: 1px solid #928374;
-background-color: #282828;
+border: 1px solid #bd93f9;
+background-color: #282a36;
 }
 
 #input {
 margin: 5px;
 border: none;
-color: #ebdbb2;
-background-color: #1d2021;
+color: #f8f8f2;
+background-color: #44475a;
 }
 
 #inner-box {
 margin: 5px;
 border: none;
-background-color: #282828;
+background-color: #282a36;
 }
 
 #outer-box {
 margin: 5px;
 border: none;
-background-color: #282828;
+background-color: #282a36;
 }
 
 #scroll {
@@ -35,9 +35,9 @@ border: none;
 #text {
 margin: 5px;
 border: none;
-color: #ebdbb2;
-}
+color: #f8f8f2;
+} 
 
 #entry:selected {
-background-color: #1d2021;
+background-color: #44475a;
 }
